--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,22 +9,22 @@ on:
   push:
     branches: 
       - main
-    tags:
-      - v*
+#    tags:
+#      - v*
+
 jobs:
-  check:
-    if: github.event.pull_request.draft == false
-    name: Check
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
-      - uses: rui314/setup-mold@v1
         with:
           profile: minimal
           toolchain: stable
           override: true
       - uses: Swatinem/rust-cache@v1
+      - uses: rui314/setup-mold@v1
       - run: sudo apt-get update
       - run: sudo apt install libwebkit2gtk-4.0-dev libgtk-3-dev libayatana-appindicator3-dev clang
       - uses: actions-rs/cargo@v1
