--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,14 @@ jobs:
       - uses: Swatinem/rust-cache@v1
       - uses: rui314/setup-mold@v1
       - run: sudo apt-get update
-      - run: sudo apt install libwebkit2gtk-4.0-dev libgtk-3-dev libayatana-appindicator3-dev clang
+#      - run: sudo apt install libwebkit2gtk-4.0-dev libgtk-3-dev libayatana-appindicator3-dev clang
+      - run: > 
+          sudo apt install libwebkit2gtk-4.0-dev \
+          build-essential \
+          libssl-dev \
+          libappindicator3-dev \
+          libappindicator3-1 \
+          librsvg2-dev
       - uses: actions-rs/cargo@v1
         with:
           command: build
