--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,11 +28,11 @@ jobs:
       - run: sudo apt-get update
 #      - run: sudo apt install libwebkit2gtk-4.0-dev libgtk-3-dev libayatana-appindicator3-dev clang
       - run: > 
-          sudo apt install libwebkit2gtk-4.0-dev \
-          build-essential \
-          libssl-dev \
-          libappindicator3-dev \
-          libappindicator3-1 \
+          sudo apt install libwebkit2gtk-4.0-dev
+          build-essential
+          libssl-dev
+          libappindicator3-dev
+          libappindicator3-1
           librsvg2-dev
       - uses: actions-rs/cargo@v1
         with:
