--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,4 +38,12 @@ jobs:
         with:
           command: build
           args: --release
-
+    - uses: tauri-apps/tauri-action@v0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tagName: v.0.0.1-alpha # the action automatically replaces \_\_VERSION\_\_ with the app version
+        releaseName: "test release"
+        releaseBody: "testing asset uploads"
+        releaseDraft: true
+        prerelease: true 
